@@ -13,6 +13,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #27048: Prevents distutils failing on Windows when environment
+  variables contain non-ASCII characters
+
 - Issue #27330: Fixed possible leaks in the ctypes module.
 
 - Issue #27238: Got rid of bare excepts in the turtle module.  Original patch
